adding a local redis server